----------
v4.0.1-git
----------



------
v4.0.0
------

[jan] Update Polish translation (Krzysztof Kozera <krzysztof113@o2.pl>).
[jan] Update Dutch translation (Arjen de Korte <arjen+horde@de-korte.org>).


---------
v4.0.0RC1
---------

[jan] Fix client-side sorting by date.
[jan] Fix exporting (Bug #11507).


-----------
v4.0.0beta1
-----------

[gwr] Always mark the initial share as default notepad.
[gwr] Mark the initial default share as such with the Kolab backend.
[gwr] Fixed deletion of shares with the Kolab driver.
[jan] Fix display of note title (Bug #11275).


----------
v3.0.7-git
----------

[jan] Update Turkish translation (İstanbul Technical University).


------
v3.0.6
------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[jan] Update Italian translation (Massimo Malabotta <mmalabotta@units.it>).
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).


------
v3.0.5
------

[mjr] Add missing getChanges API method.


------
v3.0.4
------

[jan] Use locale based sorting.
[jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------
v3.0.3
------

[jan] Add Estonian translation (Alar Sing <alar.sing@err.ee>).
[gwr] Avoid including the owner name into the default share (Kolab backend).
[mjr] Fix removeUserData implementation.


------
v3.0.2
------

[jan] Don't load all shares with requested permissions from the backend if
      $conf['share']['hidden'] is enabled.


------
v3.0.1
------

[jan] Fix accidental encryption of notes (Bug #9981).
[jan] Fix color picker for categories in the note list header (Bug #9980).


----
v3.0
----

[jan] Fix generating tooltip previews of encrypted notes.
[jan] Fix application-specific permission checks (Bug #9786).
[mjr] Datatree share to SQL upgrade script refactored for Horde 4.
[mjr] Default sorting criteria by creation date (Bug #7332).